--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "@vtex/gatsby-plugin-pixel-facebook": "0.325.0",
     "@vtex/gatsby-plugin-theme-ui": "0.325.0",
     "@vtex/gatsby-source-vtex": "0.325.0",
-    "@vtex/gatsby-theme-store": "0.325.0",
-    "@vtex/store-ui": "0.325.0",
+    "@vtex/gatsby-theme-store": "0.328.0-alpha.1",
+    "@vtex/store-sdk": "0.328.0-alpha.1",
+    "@vtex/store-ui": "0.327.0-alpha.0",
     "babel-preset-gatsby": "^1.1.0",
     "csvtojson": "^2.0.10",
     "dotenv": "^8.2.0",
