--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@vtex/gatsby-plugin-pixel-facebook": "0.336.0",
     "@vtex/gatsby-plugin-theme-ui": "0.336.0",
     "@vtex/gatsby-source-vtex": "0.336.0",
-    "@vtex/gatsby-theme-store": "0.336.0",
+    "@vtex/gatsby-theme-store": "0.339.0-alpha.0",
     "@vtex/store-sdk": "0.336.0",
     "@vtex/store-ui": "0.336.0",
     "babel-preset-gatsby": "^1.1.0",
