--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@vtex/gatsby-plugin-google-tag-manager": "0.325.0",
     "@vtex/gatsby-plugin-graphql": "0.325.0",
     "@vtex/gatsby-plugin-i18n": "0.325.0",
-    "@vtex/gatsby-plugin-nginx": "0.325.1-nginxlogs.0",
+    "@vtex/gatsby-plugin-nginx": "0.337.1-nginxjson2.0",
     "@vtex/gatsby-plugin-pixel-facebook": "0.325.0",
     "@vtex/gatsby-plugin-theme-ui": "0.325.0",
     "@vtex/gatsby-source-vtex": "0.325.0",
