--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "private": true,
   "version": "0.111.0",
   "dependencies": {
-    "@vtex/gatsby-plugin-cms": "0.347.0",
-    "@vtex/gatsby-plugin-google-tag-manager": "0.347.0",
-    "@vtex/gatsby-plugin-graphql": "0.347.0",
-    "@vtex/gatsby-plugin-i18n": "0.347.0",
-    "@vtex/gatsby-plugin-nginx": "0.347.0",
-    "@vtex/gatsby-plugin-pixel-facebook": "0.347.0",
-    "@vtex/gatsby-plugin-theme-ui": "0.347.0",
-    "@vtex/gatsby-source-vtex": "0.347.0",
-    "@vtex/gatsby-theme-store": "0.347.0",
-    "@vtex/store-sdk": "0.347.0",
-    "@vtex/store-ui": "0.347.0",
+    "@vtex/gatsby-plugin-cms": "https://pkg.csb.dev/vtex/faststore/commit/3711050b/@vtex/gatsby-plugin-cms",
+    "@vtex/gatsby-plugin-google-tag-manager": "https://pkg.csb.dev/vtex/faststore/commit/3711050b/@vtex/gatsby-plugin-google-tag-manager",
+    "@vtex/gatsby-plugin-graphql": "https://pkg.csb.dev/vtex/faststore/commit/3711050b/@vtex/gatsby-plugin-graphql",
+    "@vtex/gatsby-plugin-i18n": "https://pkg.csb.dev/vtex/faststore/commit/3711050b/@vtex/gatsby-plugin-i18n",
+    "@vtex/gatsby-plugin-nginx": "https://pkg.csb.dev/vtex/faststore/commit/3711050b/@vtex/gatsby-plugin-nginx",
+    "@vtex/gatsby-plugin-pixel-facebook": "https://pkg.csb.dev/vtex/faststore/commit/3711050b/@vtex/gatsby-plugin-pixel-facebook",
+    "@vtex/gatsby-plugin-theme-ui": "https://pkg.csb.dev/vtex/faststore/commit/3711050b/@vtex/gatsby-plugin-theme-ui",
+    "@vtex/gatsby-source-vtex": "https://pkg.csb.dev/vtex/faststore/commit/3711050b/@vtex/gatsby-source-vtex",
+    "@vtex/gatsby-theme-store": "https://pkg.csb.dev/vtex/faststore/commit/3711050b/@vtex/gatsby-theme-store",
+    "@vtex/store-sdk": "https://pkg.csb.dev/vtex/faststore/commit/3711050b/@vtex/store-sdk",
+    "@vtex/store-ui": "https://pkg.csb.dev/vtex/faststore/commit/3711050b/@vtex/store-ui",
     "babel-preset-gatsby": "^1.1.0",
     "csvtojson": "^2.0.10",
     "dotenv": "^8.2.0",
@@ -28,7 +28,7 @@
     "webpack-merge": "^5.7.3"
   },
   "devDependencies": {
-    "@vtex/lighthouse-config": "0.347.0",
+    "@vtex/lighthouse-config": "https://pkg.csb.dev/vtex/faststore/commit/3711050b/@vtex/lighthouse-config",
     "@vtex/prettier-config": "^0.3.5",
     "@vtex/tsconfig": "^0.5.5",
     "eslint": "^7.22.0",
