--- a/package.json
+++ b/package.json
@@ -3,22 +3,21 @@
   "private": true,
   "version": "0.117.0",
   "dependencies": {
-    "@vtex/gatsby-plugin-cms": "https://pkg.csb.dev/vtex/faststore/commit/85e01ea8/@vtex/gatsby-plugin-cms",
-    "@vtex/gatsby-plugin-google-tag-manager": "https://pkg.csb.dev/vtex/faststore/commit/85e01ea8/@vtex/gatsby-plugin-google-tag-manager",
-    "@vtex/gatsby-plugin-graphql": "https://pkg.csb.dev/vtex/faststore/commit/85e01ea8/@vtex/gatsby-plugin-graphql",
-    "@vtex/gatsby-plugin-i18n": "https://pkg.csb.dev/vtex/faststore/commit/85e01ea8/@vtex/gatsby-plugin-i18n",
-    "@vtex/gatsby-plugin-nginx": "https://pkg.csb.dev/vtex/faststore/commit/e7546f92/@vtex/gatsby-plugin-nginx",
-    "@vtex/gatsby-plugin-performance": "https://pkg.csb.dev/vtex/faststore/commit/85e01ea8/@vtex/gatsby-plugin-performance",
-    "@vtex/gatsby-plugin-pixel-facebook": "https://pkg.csb.dev/vtex/faststore/commit/85e01ea8/@vtex/gatsby-plugin-pixel-facebook",
-    "@vtex/gatsby-plugin-theme-ui": "https://pkg.csb.dev/vtex/faststore/commit/85e01ea8/@vtex/gatsby-plugin-theme-ui",
-    "@vtex/gatsby-source-vtex": "https://pkg.csb.dev/vtex/faststore/commit/85e01ea8/@vtex/gatsby-source-vtex",
-    "@vtex/gatsby-theme-store": "https://pkg.csb.dev/vtex/faststore/commit/85e01ea8/@vtex/gatsby-theme-store",
-    "@vtex/store-sdk": "https://pkg.csb.dev/vtex/faststore/commit/85e01ea8/@vtex/store-sdk",
-    "@vtex/store-ui": "https://pkg.csb.dev/vtex/faststore/commit/85e01ea8/@vtex/store-ui",
+    "@vtex/gatsby-plugin-cms": "^0.359.0",
+    "@vtex/gatsby-plugin-google-tag-manager": "^0.359.0",
+    "@vtex/gatsby-plugin-graphql": "^0.359.0",
+    "@vtex/gatsby-plugin-i18n": "^0.359.0",
+    "@vtex/gatsby-plugin-nginx": "^0.359.0",
+    "@vtex/gatsby-plugin-performance": "^0.359.0",
+    "@vtex/gatsby-plugin-pixel-facebook": "^0.359.0",
+    "@vtex/gatsby-plugin-theme-ui": "^0.359.0",
+    "@vtex/gatsby-source-vtex": "^0.359.0",
+    "@vtex/gatsby-theme-store": "^0.359.0",
+    "@vtex/store-sdk": "^0.359.0",
+    "@vtex/store-ui": "^0.359.0",
     "babel-preset-gatsby": "^1.1.0",
     "csvtojson": "^2.0.10",
     "dotenv": "^8.2.0",
-    "faststore": "https://pkg.csb.dev/vtex/faststore/commit/85e01ea8/@vtex/gatsby-plugin-nginx",
     "gatsby": "^3.1.2",
     "gatsby-plugin-manifest": "^3.1.0",
     "gatsby-plugin-next-seo": "^1.7.0",
@@ -31,7 +30,7 @@
     "yarn": "^1.22.10"
   },
   "devDependencies": {
-    "@vtex/lighthouse-config": "https://pkg.csb.dev/vtex/faststore/commit/85e01ea8/@vtex/lighthouse-config",
+    "@vtex/lighthouse-config": "^0.359.0",
     "@vtex/prettier-config": "^0.3.5",
     "@vtex/tsconfig": "^0.5.5",
     "eslint": "^7.22.0",
