--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@vtex/gatsby-plugin-google-tag-manager": "^0.366.0",
     "@vtex/gatsby-plugin-graphql": "^0.366.0",
     "@vtex/gatsby-plugin-i18n": "^0.366.0",
-    "@vtex/gatsby-plugin-nginx": "https://pkg.csb.dev/vtex/faststore/commit/45f38fdd/@vtex/gatsby-plugin-nginx",
+    "@vtex/gatsby-plugin-nginx": "^0.366.0",
     "@vtex/gatsby-plugin-performance": "^0.366.0",
     "@vtex/gatsby-plugin-pixel-facebook": "^0.366.0",
     "@vtex/gatsby-plugin-theme-ui": "^0.366.0",
