--- a/package.json
+++ b/package.json
@@ -33,9 +33,13 @@
     "yarn": "^1.22.10"
   },
   "devDependencies": {
+    "@cypress/code-coverage": "^3.9.7",
+    "@testing-library/cypress": "^7.0.6",
     "@vtex/lighthouse-config": "0.372.13",
     "@vtex/prettier-config": "0.3.6",
+    "@vtex/test-tools": "^3.4.1",
     "@vtex/tsconfig": "0.5.6",
+    "cypress": "^6.8.0",
     "eslint": "^7.22.0",
     "eslint-config-vtex-react": "^7.0.0",
     "husky": "^5.2.0",
