--- a/package.json
+++ b/package.json
@@ -3,20 +3,19 @@
   "private": true,
   "version": "0.142.0",
   "dependencies": {
-    "@vtex/gatsby-plugin-cms": "https://pkg.csb.dev/vtex/faststore/commit/bbec9b9f/@vtex/gatsby-plugin-cms",
-    "@vtex/gatsby-plugin-google-tag-manager": "https://pkg.csb.dev/vtex/faststore/commit/bbec9b9f/@vtex/gatsby-plugin-google-tag-manager",
-    "@vtex/gatsby-plugin-graphql": "https://pkg.csb.dev/vtex/faststore/commit/bbec9b9f/@vtex/gatsby-plugin-graphql",
-    "@vtex/gatsby-plugin-i18n": "https://pkg.csb.dev/vtex/faststore/commit/bbec9b9f/@vtex/gatsby-plugin-i18n",
-    "@vtex/gatsby-plugin-nginx": "https://pkg.csb.dev/vtex/faststore/commit/bbec9b9f/@vtex/gatsby-plugin-nginx",
-    "@vtex/gatsby-plugin-performance": "https://pkg.csb.dev/vtex/faststore/commit/bbec9b9f/@vtex/gatsby-plugin-performance",
-    "@vtex/gatsby-plugin-pixel-facebook": "https://pkg.csb.dev/vtex/faststore/commit/bbec9b9f/@vtex/gatsby-plugin-pixel-facebook",
-    "@vtex/gatsby-plugin-theme-ui": "https://pkg.csb.dev/vtex/faststore/commit/bbec9b9f/@vtex/gatsby-plugin-theme-ui",
-    "@vtex/gatsby-plugin-thumbor": "https://pkg.csb.dev/vtex/faststore/commit/bbec9b9f/@vtex/gatsby-plugin-thumbor",
-    "@vtex/gatsby-source-vtex": "https://pkg.csb.dev/vtex/faststore/commit/bbec9b9f/@vtex/gatsby-source-vtex",
-    "@vtex/gatsby-theme-store": "https://pkg.csb.dev/vtex/faststore/commit/bbec9b9f/@vtex/gatsby-theme-store",
-    "@vtex/renovate-config": "https://pkg.csb.dev/vtex/faststore/commit/bbec9b9f/@vtex/renovate-config",
-    "@vtex/store-sdk": "https://pkg.csb.dev/vtex/faststore/commit/bbec9b9f/@vtex/store-sdk",
-    "@vtex/store-ui": "https://pkg.csb.dev/vtex/faststore/commit/bbec9b9f/@vtex/store-ui",
+    "@vtex/gatsby-plugin-cms": "^0.371.25",
+    "@vtex/gatsby-plugin-google-tag-manager": "^0.371.25",
+    "@vtex/gatsby-plugin-graphql": "^0.371.25",
+    "@vtex/gatsby-plugin-i18n": "^0.371.25",
+    "@vtex/gatsby-plugin-nginx": "^0.371.25",
+    "@vtex/gatsby-plugin-performance": "^0.371.25",
+    "@vtex/gatsby-plugin-pixel-facebook": "^0.371.25",
+    "@vtex/gatsby-plugin-theme-ui": "^0.371.25",
+    "@vtex/gatsby-plugin-thumbor": "^0.371.25",
+    "@vtex/gatsby-source-vtex": "^0.371.25",
+    "@vtex/gatsby-theme-store": "^0.371.25",
+    "@vtex/store-sdk": "^0.371.25",
+    "@vtex/store-ui": "^0.371.25",
     "babel-preset-gatsby": "^1.1.0",
     "csvtojson": "^2.0.10",
     "dotenv": "^8.2.0",
@@ -33,7 +32,7 @@
     "yarn": "^1.22.10"
   },
   "devDependencies": {
-    "@vtex/lighthouse-config": "https://pkg.csb.dev/vtex/faststore/commit/bbec9b9f/@vtex/lighthouse-config",
+    "@vtex/lighthouse-config": "^0.371.25",
     "@vtex/prettier-config": "0.3.6",
     "@vtex/tsconfig": "0.5.6",
     "eslint": "^7.22.0",
