--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@testing-library/cypress": "^7.0.6",
     "@vtex/lighthouse-config": "^0.372.5",
     "@vtex/prettier-config": "0.3.6",
-    "@vtex/test-tools": "^3.4.1",
+    "@vtex/test-tools": "3.4.3-beta.0",
     "@vtex/tsconfig": "0.5.6",
     "cypress": "^6.8.0",
     "eslint": "^7.22.0",
