--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "serve": "gatsby serve",
     "docker:serve": "sed -i -e 's/\\$PORT/80/' public/nginx.conf && docker run --rm --name local_nginx -v \"$PWD/public/nginx.conf:/etc/nginx/nginx.conf\" -v \"$PWD/public:/etc/nginx/html\" -p 80:80 -it fholzer/nginx-brotli@sha256:ebaf3265a9e21dcd4ddfe44b22d6c4d8fdec563c9a0afd69097f286fd8a0eb00",
     "clean": "gatsby clean",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
     "format": "prettier --write \"**/*.{ts,js,tsx,jsx,json}\"",
     "lint": "eslint --ext js,ts,jsx,tsx .",
     "test:lhci": "lhci autorun",
