--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
   "private": true,
   "version": "0.145.0",
   "dependencies": {
-    "@vtex/gatsby-plugin-cms": "^0.372.5",
-    "@vtex/gatsby-plugin-google-tag-manager": "^0.372.5",
-    "@vtex/gatsby-plugin-graphql": "^0.372.5",
-    "@vtex/gatsby-plugin-i18n": "^0.372.5",
-    "@vtex/gatsby-plugin-nginx": "^0.372.5",
-    "@vtex/gatsby-plugin-performance": "^0.372.5",
-    "@vtex/gatsby-plugin-pixel-facebook": "^0.372.5",
-    "@vtex/gatsby-plugin-theme-ui": "^0.372.5",
-    "@vtex/gatsby-plugin-thumbor": "^0.372.5",
-    "@vtex/gatsby-source-vtex": "^0.372.5",
-    "@vtex/gatsby-theme-store": "^0.372.5",
-    "@vtex/store-sdk": "^0.372.5",
-    "@vtex/store-ui": "^0.372.5",
+    "@vtex/gatsby-plugin-cms": "^0.372.3",
+    "@vtex/gatsby-plugin-google-tag-manager": "^0.372.3",
+    "@vtex/gatsby-plugin-graphql": "^0.372.3",
+    "@vtex/gatsby-plugin-i18n": "^0.372.3",
+    "@vtex/gatsby-plugin-nginx": "^0.372.3",
+    "@vtex/gatsby-plugin-performance": "^0.372.3",
+    "@vtex/gatsby-plugin-pixel-facebook": "^0.372.3",
+    "@vtex/gatsby-plugin-theme-ui": "^0.372.3",
+    "@vtex/gatsby-plugin-thumbor": "^0.372.3",
+    "@vtex/gatsby-source-vtex": "^0.372.3",
+    "@vtex/gatsby-theme-store": "https://pkg.csb.dev/vtex/faststore/commit/9e8de95f/@vtex/gatsby-theme-store",
+    "@vtex/store-sdk": "https://pkg.csb.dev/vtex/faststore/commit/9e8de95f/@vtex/store-sdk",
+    "@vtex/store-ui": "^0.372.3",
     "babel-preset-gatsby": "^1.1.0",
     "csvtojson": "^2.0.10",
     "dotenv": "^8.2.0",
