--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
   "private": true,
   "version": "0.148.0",
   "dependencies": {
-    "@vtex/gatsby-plugin-cms": "^0.372.5",
-    "@vtex/gatsby-plugin-google-tag-manager": "^0.372.5",
-    "@vtex/gatsby-plugin-graphql": "^0.372.5",
-    "@vtex/gatsby-plugin-i18n": "^0.372.5",
-    "@vtex/gatsby-plugin-nginx": "^0.372.5",
-    "@vtex/gatsby-plugin-performance": "^0.372.5",
-    "@vtex/gatsby-plugin-pixel-facebook": "^0.372.5",
-    "@vtex/gatsby-plugin-theme-ui": "^0.372.5",
-    "@vtex/gatsby-plugin-thumbor": "^0.372.5",
-    "@vtex/gatsby-source-vtex": "^0.372.5",
-    "@vtex/gatsby-theme-store": "^0.372.5",
-    "@vtex/store-sdk": "^0.372.5",
-    "@vtex/store-ui": "https://pkg.csb.dev/vtex/faststore/commit/1c392f4f/@vtex/store-ui",
+    "@vtex/gatsby-plugin-cms": "^0.372.7",
+    "@vtex/gatsby-plugin-google-tag-manager": "^0.372.7",
+    "@vtex/gatsby-plugin-graphql": "^0.372.7",
+    "@vtex/gatsby-plugin-i18n": "^0.372.7",
+    "@vtex/gatsby-plugin-nginx": "^0.372.7",
+    "@vtex/gatsby-plugin-performance": "^0.372.7",
+    "@vtex/gatsby-plugin-pixel-facebook": "^0.372.7",
+    "@vtex/gatsby-plugin-theme-ui": "^0.372.7",
+    "@vtex/gatsby-plugin-thumbor": "^0.372.7",
+    "@vtex/gatsby-source-vtex": "^0.372.7",
+    "@vtex/gatsby-theme-store": "^0.372.7",
+    "@vtex/store-sdk": "^0.372.7",
+    "@vtex/store-ui": "^0.372.7",
     "babel-preset-gatsby": "^1.1.0",
     "csvtojson": "^2.0.10",
     "dotenv": "^8.2.0",
@@ -35,7 +35,7 @@
   "devDependencies": {
     "@cypress/code-coverage": "^3.9.7",
     "@testing-library/cypress": "^7.0.6",
-    "@vtex/lighthouse-config": "^0.372.5",
+    "@vtex/lighthouse-config": "^0.372.7",
     "@vtex/prettier-config": "0.3.6",
     "@vtex/test-tools": "3.4.3-beta.0",
     "@vtex/tsconfig": "0.5.6",
